logs/Slang/generated/hdlconv/hdlconvertor_p494.sv.log
name: hdlconvertor_p494
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p494.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p494.sv:1:1: error: expected member
checker op_test (logic clk, vld_1, vld_2, logic [3:0] opcode);
^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p494.sv:1:42: error: expected identifier
checker op_test (logic clk, vld_1, vld_2, logic [3:0] opcode);
                                         ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p494.sv:1:43: error: expected declarator
checker op_test (logic clk, vld_1, vld_2, logic [3:0] opcode);
                                          ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p494.sv:1:54: error: expected ','
checker op_test (logic clk, vld_1, vld_2, logic [3:0] opcode);
                                                     ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p494.sv:1:61: error: expected declarator
checker op_test (logic clk, vld_1, vld_2, logic [3:0] opcode);
                                                            ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p494.sv:4:3: error: language feature not yet supported
  covergroup cg_op with function sample(bit [3:0] opcode_d1);
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p494.sv:8:3: error: use of undeclared identifier 'cg_op'
  cg_op cg_op_1 = new();
  ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p494.sv:8:19: error: language feature not yet supported
  cg_op cg_op_1 = new();
                  ^~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p494.sv:10:3: error: language feature not yet supported
  sequence op_accept;
  ^~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p494.sv:11:64: error: expected expression
    @(posedge clk) vld_1 ##1 (vld_2, cg_op_1.sample(opcode_d1));
                                                               ^
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p494.sv:14:3: error: language feature not yet supported
  cover property (op_accept);
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p494.sv:16:1: error: expected member
endchecker
^~~~~~~~~~
